# QuantDog

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  app.py  docker-compose.yml  investor-code-sample.md  main.py  pyproject.toml  requirements.txt  run-api.bat  run-dev.bat  run-frontend.bat  setup.bat  setup.sh  test_imports.py
api/: models.py  routes.py  websocket.py
client/: .dockerignore  demo.dockerfile  main.py  pyproject.toml
client/quantdog/client/common/: __init__.py
client/quantdog/client/network/: __init__.py  interfaces.py  kem_listener.py  packets.py  pqc_listener_tcp.py  tcp_listener.py
client/quantdog/client/security/: __init__.py
core/: __init__.py  monitoring.py  router.py  threat_detector.py
demo/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
frontend/: index.html  jsrepo.json  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/layout/: layout.tsx  navbar.tsx  sidebar.tsx
frontend/src/components/pages/: honeypots.tsx  visual.tsx
frontend/src/components/ui/: navbar.tsx
frontend/src/services/: api.ts  websocket.ts
services/: blockchain.py
utils/: config.py
writeup/: QuantDog Market Research.txt
